--- a/photo.css
+++ b/photo.css
@@ -5,7 +5,7 @@ h2 {
 }
 
 body {
-   background-image:url(./images/image.png);
+   background-image:url(./image.png);
   font-family: 'Courier New', Courier, monospace;
 }
 
